--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -4,3 +4,8 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+$desert: #ccac5b;
+$almost-black: #0f1112;
+$brownish-grey: #666666;
+$dark-grey: #22272b;
+$cool-grey: #a7a9ac;
