--- a/src/assets/scss/LaunchDetails.scss
+++ b/src/assets/scss/LaunchDetails.scss
@@ -1,51 +1,70 @@
 @import './vars.scss';
-
-.header {
+.header--bg {
     height: 75px;
-    background:$almost-black;
-    position: relative;
-    .back {
-        height: 100%;
-        color: $desert;
-        display: flex;
-        letter-spacing: 9px;
-        text-transform: uppercase;
-        font-size: 14px;
-        width: 15em;
-        align-items: center;
-        justify-content: flex-end;
-        margin-left: 2em;
-        .arrow {
-            height: 100%;
-            margin-right: 2em;
-            display: flex;
-            align-items: center;
-        }
-        .arrow__bg {
-            background: url('../img/arrow_pointer.png');
-            background-position: center center;
-            background-size: cover;
-            width: 10px;
-            height: 10px;
-        }
-        .arrow__line {
-            border-bottom: 3px solid $desert;
-            width: 2em;
-            height: 2px;
-            margin-left: -2px;
-        }
-    }
-    .logo {
-        background: url('../img/space_x_logo_bw_centered.png');
-        background-size: contain;
-        background-position: center center;
-        background-repeat: no-repeat;
-        height: 100%;
-        width: 15em;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    
+    width: 100%;
+    background: $almost-black;
+    position: absolute;
+    z-index: -1;
 }
+.launch-details__container {
+    width: 80%;
+    margin: 0 auto;
+    .header {
+        width: 100%;
+        height: 75px;
+        position: relative;
+        .back {
+            height: 100%;
+            color: $desert;
+            display: flex;
+            letter-spacing: 9px;
+            text-transform: uppercase;
+            font-size: 14px;
+            width: 15em;
+            align-items: center;
+            justify-content: flex-end;
+            margin-left: 2em;
+            .arrow {
+                height: 100%;
+                margin-right: 2em;
+                display: flex;
+                align-items: center;
+                &__bg {
+                    background: url('../img/arrow_pointer.png');
+                    background-position: center center;
+                    background-size: cover;
+                    width: 10px;
+                    height: 10px;
+                }
+                &__line {
+                    border-bottom: 3px solid $desert;
+                    width: 2em;
+                    height: 2px;
+                    margin-left: -2px;
+                }
+            }
+            
+        }
+        .logo {
+            background: url('../img/space_x_logo_bw_centered.png');
+            background-size: contain;
+            background-position: center center;
+            background-repeat: no-repeat;
+            height: 100%;
+            width: 15em;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        
+    }
+    .footer {
+        width: 100%;
+        height: 300px;
+        background: url('../img/rocket.png') top center no-repeat;
+        background-size: cover;
+    
+    }
+}
+
