--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -3,6 +3,9 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 1.5;
 }
 $desert: #ccac5b;
 $almost-black: #0f1112;
