--- a/src/assets/scss/LaunchDetails.scss
+++ b/src/assets/scss/LaunchDetails.scss
@@ -59,12 +59,41 @@
         }
         
     }
+}
+.footer--bg {
+    margin-top: 5em;
+    width: 100%;
+    height: 700px;
+    background: url('../img/rocket.png') top center no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: -1;
     .footer {
-        width: 100%;
-        height: 300px;
-        background: url('../img/rocket.png') top center no-repeat;
-        background-size: cover;
-    
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        color: #fff;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin-bottom: 3em;
+        h3 {
+            font-size: 24px;
+            letter-spacing: 18px;
+        }
+        ul {
+            display: flex;
+            justify-content: space-between;
+            list-style-type: none;
+            padding: 0;
+            li {
+                border: 1px solid #fff;
+                padding: 5px 25px;
+                border-radius: 20px;
+                margin: 0 1.5em;
+            }
+        }
     }
 }
 
