--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
 $desert: #ccac5b;
 $almost-black: #0f1112;
 $brownish-grey: #666666;
 $dark-grey: #22272b;
 $cool-grey: #a7a9ac;
-
 body {
     margin: -15px;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     letter-spacing: 1px;
     line-height: 1.5;
+    background: #fff;
 }
+
 ul:not(.launches__list) {
     display: flex;
     justify-content: space-between;
@@ -32,6 +32,7 @@ ul:not(.launches__list) {
         }
     }
 }
+
 .logo {
     background: url('../img/space_x_logo_bw_centered.png');
     background-size: contain;
