--- a/src/assets/scss/LaunchDetails.scss
+++ b/src/assets/scss/LaunchDetails.scss
@@ -28,6 +28,7 @@
             align-items: center;
             justify-content: flex-end;
             margin-left: 2em;
+            cursor: pointer;
             .arrow {
                 height: 100%;
                 margin-right: 2em;
@@ -62,8 +63,8 @@
 .footer--bg {
     margin-top: 5em;
     width: 100%;
-    height: 700px;
-    background: url('../img/rocket.png') top center no-repeat;
+    height: 250px;
+    background: url('../img/rocket.png') center center no-repeat;
     background-size: cover;
     position: relative;
     .footer {
