--- a/src/assets/scss/RocketList.scss
+++ b/src/assets/scss/RocketList.scss
@@ -7,6 +7,7 @@
     clear: left;
     list-style-type: none;
     position: relative;
+    cursor: pointer;
     &:not(:first-child) {
         margin-top: 4em;
     }
