change list rendering

--- a/src/assets/scss/LaunchesList.scss
+++ b/src/assets/scss/LaunchesList.scss
@@ -29,4 +29,11 @@ body {
         height: 200px;
         margin-left: 50px;
     }
+    h3 {
+        color: #fff;
+        text-align: center;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin-bottom: 50px;
+    }
 }
